--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.2"
@@ -19,8 +20,8 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^5.1.0",
-    "vite": "^5.0.0",
-    "gh-pages": "^5.0.0"
+    "vite": "^5.0.0"
   }
 }
